gui/editor/NumberEditor: Fix Java9+ deprecation for new Long.